syntax = "proto3";

service Student {
  rpc SearchStudent (StudentRequest) returns (StudentResponse);
  rpc IndexStudent (IndexStudentRequest) returns (IndexStudentResponse);
  // rpc ExportXLSX(XlsxRequest) returns (XlsxResponse);
}

message StudentRequest {
  string keyword = 1;
}

message StudentResponse {
  repeated uint64 ids = 1;
}

message IndexStudentRequest {
  string name = 1;
  int32 age = 2;
  string id = 3;
}

message IndexStudentResponse {
  string message = 1;
}

message XlsxRequest {
  string path = 5;
  string fileName = 6;
}

/*
message XlsxResponse {
  string message = 1;
  string path = 2;
}
*/